@@ -104,21 +104,13 @@ Being::setPath(const Path &path)
 void
 Being::setHairColor(Uint16 color)
 {
-    mHairColor = color;
-    if (mHairColor < 1 || mHairColor > NR_HAIR_COLORS + 1)
-    {
-        mHairColor = 1;
-    }
+    mHairColor = (color < NR_HAIR_COLORS) ? color : 0;
 }
 
 void
 Being::setHairStyle(Uint16 style)
 {
-    mHairStyle = style;
-    if (mHairStyle < 1 || mHairStyle > NR_HAIR_STYLES)
-    {
-        mHairStyle = 1;
-    }
+    mHairStyle = (style < NR_HAIR_STYLES) ? style : 0;
 }
 
 void
